TEST pull request

--- a/Startseite.css
+++ b/Startseite.css
@@ -1,169 +1,134 @@
 
-body
-{
-    position: relative; 
-    max-width: 1000px;
-    margin: 0 auto;
-    font-family: Arial, Helvetica, sans-serif;
+        /*START Header */
+        .blockLook
+        {
+            background-color:#496469 /*#CCCCCC*/;
+            border-radius: 15px;
+            box-shadow: 10px 10px 5px gray;/*gray*/
+            margin-bottom: 10px;
+        }
+        .MainLook{
+            margin: 0 10px;   
+        }
+        body
+        {
+            background-color: #d87f37 /*white*/;
+            font-family: Arial, Helvetica, sans-serif;
+            position: relative; 
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0;
+        }
+        header
+        {
+            height: 180px;
+            border-top: hidden;
+            padding-top: 1px;
+        }
+        header #LogoBild
+        {
+            margin-top: 15px;
+            margin-left: 15px;
+            position: absolute;
+            width: 150px;
+            height: 150px;
+        }
+        @media screen and (max-width: 700px){
+            header #LogoBild{
+                display: none;
+            }
+        }
+        #header{
+            text-align: center;
+        }
+        h1{
+            padding: 25px 0;
+        }
+        header nav{
+            text-align: center;
+        }
+        #menu a{
+            color: black;   
+            padding: 10px 0;
+            text-decoration: none;
+            margin-left: 30px;
+        }
+        #menu a:first-of-type{
+            margin-left: 0;
+        }
+        /*END Header */
+/*Begrüßung*/
+#Begrüßung{
+    position: absolute;
+    width: 400px;
 }
-header
-{
-background-color: #CCCCCC;
-height: 150px;
-border-top: hidden;
-border-radius: 15px;
-}
-header img
-{
-position: absolute;
-width: 150px;
-height: 150px;
-margin-top: 20px;
 
+#KlavierKreis{
+    margin-top: 16px;
+    margin-left: 420px;
+    position: absolute;
+    width: 400px;
+    height: 250px;
 }
-#header
-{
-text-align: center;
- }
-h1
-{
-padding: 25px 0;
+
+#Information{
+    margin-top: 11px;
+    margin-left: 840px;
+    position: absolute;
+    width: 250px;
 }
-header nav
-{
-text-align: center;
-} 
-.menu a
-{
-text-decoration: none;
-color: black;
-margin-left: 50px;
+
+@media screen and (min-width: 1060px){
+    #Information{
+        margin-left: 840px;
+        position: absolute;
+    }
 }
-.menu a:last-of-type
-{
-margin-right: 50px;
+
+@media screen and (max-width: 1060px){
+    #Information{
+         position: absolute;
+         margin-left: 10px;
+         margin-top: 156px;
+    }
 }
+
+
+@media screen and (max-width: 830px){
+    #KlavierKreis{
+        display: none;
+    }
+}
+
+
+/*zeiten*/
 h4
 {
-    margin-bottom: 5px;
-}     
+    margin: 5px 0;
+}
 li
 {
     list-style: none;
 }
-footer
-{
-margin-top: 100px;
-}
-     .Bild
-{
-    margin-top: 100px;
-    border-radius: 20px;
-}
-@media screen and (min-width: 700px)
-{
-    #Begrüßung
-    {   
-        position: absolute;
-        margin-left: 450px;
-        z-index: 20;
-        font-size: 20px;
-        margin-top: 100px;
+
+@media screen and (min-width: 700px){
+    header #LogoBild{
+        display: none;
     }
 }
-@media screen and (min-width: 1000px) 
-{
-    #tabelle
-    {   position: absolute;
-        right: 0;
-        width: 200px; 
-        top: 290px;
-    }    
-
-}
-
-@media screen and (max-width: 700px)
-{
-    #Begrüßung
-    {   
-        
-        margin-left: 450px;
-        z-index: 20;
-        font-size: 20px;
-        margin-top: 100px;
-        margin-left: 20px;
-    }
-    .Bild
-    {
-       margin-left: 20px;
-        margin-top: 0;
-    }
-
-    #tabelle
-    {
-        margin-left: 20px;
-    }
-    .img
-    {
-    display: none;
-    }
-
-    
-}
 
 
-.blockLook{
-    background-color: #CCCCCC;
-    border-radius: 15px;
-    box-shadow: 10px 10px 5px gray;
-    margin-bottom: 10px;
-}
-
-body
-{
-    font-family: Arial, Helvetica, sans-serif;
-    position: relative; 
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0;
-}
-header
-{
-    
-    height: 180px;
-    border-top: hidden;
-    padding-top: 1px;
-}
-header img
-{
-    position: absolute;
-    width: 150px;
-    height: 150px;
-}
-
-#header
-{
-    text-align: center;
-}
-h1{
-    padding: 25px 0;
-}
-header nav
-{
-    text-align: center;
-}
-/*END Header */
 /*START Footer*/
-footer
-{
-   
+footer{
     background: #000;
     text-align: center;
     height: 30px;
-    
+    margin-top: 300px;
 }
-footer a
-{
+footer a{
     margin: 10px  auto;
+    color: black;
+    text-decoration: none;
 }
+/*END Footer*/
     
