--- a/Startseite.css
+++ b/Startseite.css
@@ -113,7 +113,7 @@ li
 
 @media screen and (min-width: 700px){
     header #LogoBild{
-        display: none;
+        display: flex;
     }
 }
 main{
