--- a/instrumente.css
+++ b/instrumente.css
@@ -25,7 +25,7 @@ a:visited
 
 header
 {
-    background-color: #83abdb;
+    background-color: #496469;
     height: 150px;
     border: black solid;
     border: hidden;
