--- a/Formula.css
+++ b/Formula.css
@@ -15,7 +15,7 @@
         }
 
         body{
-            background-color:  white;
+            background-image: linear-gradient(to right, #ADD8E6 , white, white, white, #ADD8E6);
             font-family: Arial, Helvetica, sans-serif;
             position: relative; 
             max-width: 1200px;
