--- a/Datenschutz.css
+++ b/Datenschutz.css
@@ -11,7 +11,7 @@
  }
  body
  {
-     background-color: #d87f37 /*white*/;
+    background-image: linear-gradient(to right, #ADD8E6 , white, white, white, #ADD8E6);
      font-family: Arial, Helvetica, sans-serif;
      position: relative; 
      max-width: 1200px;
