--- a/Impressum.css
+++ b/Impressum.css
@@ -1,6 +1,6 @@
  /*START Header */
  .blockLook{
-    background-color:#496469 /*#CCCCCC*/;
+    background-color: #83abdb;
     border-radius: 15px;
     box-shadow: 10px 10px 5px gray;/*gray*/
     margin-bottom: 10px;
