--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
         }
         .blockLook{
             
-            background: #84a07c; /*#CCCCCC*/
+            background-color: #83abdb;
             border-radius: 15px;
             box-shadow: 10px 10px 5px gray;/*gray*/
             margin-bottom: 10px;
