--- a/Formula.css
+++ b/Formula.css
@@ -1,62 +1,99 @@
 
         /*START Header */
-        *{
-            color: #000000;
-            font-family: 'Courier New', Courier, monospace;
-        }
-        .blockLook{
-            background-color:rgb(212, 212, 212) /*#CCCCCC*/;
-            border-radius: 15px;
-            box-shadow: 10px 10px 5px black;/*rgb(127, 127, 127) ;*/
-            margin-bottom: 10px;
-        }
-        h2{
-            text-align: center;
-        }
+        body
+{
+     position: relative;
+     max-width: 1200px;
+     margin: 0 auto; 
+     font-family: Arial;
+    background-image: linear-gradient(to right, #ADD8E6 , white, white, white, #ADD8E6);
 
-        body{
-            background-image: linear-gradient(to right, #ADD8E6 , white, white, white, #ADD8E6);
-            font-family: Arial, Helvetica, sans-serif;
-            position: relative; 
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0;
-        }
-        header{
-            
-            height: 180px;
-            border-top: hidden;
-            padding-top: 1px;
-        }
-        header img{
-            margin-top: 15px;
-            margin-left: 15px;
+}
+
+*{
+    color: #000000;
+    
+}
+a 
+{
+ 
+     text-decoration: none;
+}
+a:visited
+{
+    color: black;
+}
+
+header
+{
+    background-color: #83abdb;
+    height: 150px;
+    border: black solid;
+    border: hidden;
+    padding-top: 1px;
+    height: 170px;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    box-shadow: 10px 10px 5px gray; 
+    min-width: 600px;
+}
+img
+{
             position: absolute;
             width: 150px;
             height: 150px;
-        }
-        @media screen and (max-width: 700px){
-            header img{
+            margin-left: 30px;
+            
+}
+        
+        
+        @media screen and (max-width: 700px)
+            
+        {
+            .img{
                 display: none;
-            }
         }
-        #header{
+        }
+        
+        
+        #header
+        {
             text-align: center;
+            
         }
-        h1{
+        
+        
+        h1
+        {
+    
             padding: 25px 0;
         }
-        header nav{
+        
+        
+        header nav
+        {
             text-align: center;
         }
-        #menu a{
-            /*color: black;*/   
-            padding: 10px 0;
-            text-decoration: none;
-            margin-left: 30px;
+        
+        
+        main nav
+        {
+            width: 300px;
+            text-align: center;
         }
-        #menu a:first-of-type{
-            margin-left: 0;
+        
+        
+        .menu a
+        {
+            color: black;
+            margin-left: 50px;
+            
+        }
+        
+        
+        .menu a:last-of-type
+        {
+            margin-right: 50px;
         }
         /*END Header */
 
@@ -65,6 +102,7 @@
             height: 1000px;
             max-width: 500px;
             margin: 0px auto;
+            
         }
 
         label{
@@ -76,12 +114,14 @@
         label[for=female], label[for=male]{
             width: 45px;
             margin-left: 0px;
+            padding: 15px;
         }   
 
         div#buttons input{
             display: inline;
             width: 145px;
             margin: 0 calc( 25% - 75px );
+          
         }
 
 
