--- a/Kontakt.css
+++ b/Kontakt.css
@@ -102,9 +102,24 @@ iframe{
     }
 }
     
+.Ubutton
+{
+    border: solid black thin;
+    padding: 8px;
+    border-radius: 20%;
+    font-size: large;
+    
+}
 
-
-
+a 
+{
+ 
+     text-decoration: none;
+}
+a:visited
+{
+    color: black;
+}
 
 /*START Footer*/
 footer{
