--- a/Startseite.css
+++ b/Startseite.css
@@ -123,14 +123,14 @@ main{
 /*START Footer*/
 footer{
     background: #000;
-    text-align: center;
-    height: 30px;
     margin-top: 370px;
+    text-align: center;
 }
-footer a{
-    margin: 10px  auto;
-    color: black;
-    text-decoration: none;
+#text{
+    padding-bottom: 5px;
+    padding-top: 1px ;
 }
+
+
 /*END Footer*/
     
