--- a/Formula kontakt.css
+++ b/Formula kontakt.css
@@ -77,6 +77,9 @@ h1
     padding: 25px 0;
 }
 
+h2{
+    text-align: center;
+}
 
 header nav
 {
@@ -109,7 +112,7 @@ main nav
 
         #form{
             padding-top: 5px;
-            height: 595px;
+            height: 415px;
             max-width: 500px;
             margin: 0px auto;
             margin-top: 100px;
