--- a/Datenschutz.css
+++ b/Datenschutz.css
@@ -79,14 +79,12 @@ margin: 5px, 0;
 
 /*START Footer*/
 footer{
-background: #000;
-text-align: center;
-height: 30px;
-margin-top: 50px;
+    background: #000;
+    margin-top: 370px;
+    text-align: center;
 }
-footer a{
-margin: 10px  auto;
-color: black;
-text-decoration: none;
+#text{
+    padding-bottom: 5px;
+    padding-top: 1px ;
 }
-/*END Footer*/
+
