--- a/instrumente.css
+++ b/instrumente.css
@@ -226,6 +226,8 @@ footer a{
     text-decoration: none;
 }
 
+        /* Ende Footer */
+
         /* Unterricht */
         
         #kinderU   {
