--- a/Datenschutz.css
+++ b/Datenschutz.css
@@ -1,60 +1,108 @@
  /*START Header */
  .blockLook
- {
-    background-color: #83abdb;
-     border-radius: 15px;
-     box-shadow: 10px 10px 5px gray;/*gray*/
-     margin-bottom: 10px;
- }
- .MainLook{
-     margin: 0 10px;   
- }
- body
- {
-    background-image: linear-gradient(to right, #ADD8E6 , white, white, white, #ADD8E6);
-     font-family: Arial, Helvetica, sans-serif;
-     position: relative; 
+        {
+            background-color: #83abdb;
+            border-radius: 15px;
+            box-shadow: 10px 10px 5px gray;/*gray*/
+           
+            
+        }
+
+body
+{
+     position: relative;
      max-width: 1200px;
-     margin: 0 auto;
-     padding: 0;
- }
- header
- {
-     height: 180px;
-     border-top: hidden;
-     padding-top: 1px;
- }
- header img
- {
-     margin-top: 15px;
-     margin-left: 15px;
-     position: absolute;
-     width: 150px;
-     height: 150px;
- }
- @media screen and (max-width: 700px){
-     header img{
-         display: none;
-     }
- }
- #header{
-     text-align: center;
- }
- h1{
-     padding: 25px 0;
- }
- header nav{
-     text-align: center;
- }
- #menu a{
-     color: black;   
-     padding: 10px 0;
+     margin: 0 auto; 
+     font-family: Arial;
+    background-image: linear-gradient(to right, #ADD8E6 , white, white, white, #ADD8E6);
+
+}
+
+*{
+    color: #000000;
+    
+}
+a 
+{
+ 
      text-decoration: none;
-     margin-left: 30px;
- }
- #menu a:first-of-type{
-     margin-left: 0;
- }
+}
+a:visited
+{
+    color: black;
+}
+
+header
+{
+    background-color: #83abdb;
+    height: 150px;
+    border: black solid;
+    border: hidden;
+    padding-top: 1px;
+    height: 170px;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    box-shadow: 10px 10px 5px gray; 
+    min-width: 600px;
+}
+img
+{
+            position: absolute;
+            width: 150px;
+            height: 150px;
+            margin-left: 30px;
+            
+}
+        
+        
+        @media screen and (max-width: 700px)
+            
+        {
+            .img{
+                display: none;
+        }
+        }
+        
+        
+        #header
+        {
+            text-align: center;
+            
+        }
+        
+        
+        h1
+        {
+    
+            padding: 25px 0;
+        }
+        
+        
+        header nav
+        {
+            text-align: center;
+        }
+        
+        
+        main nav
+        {
+            width: 300px;
+            text-align: center;
+        }
+        
+        
+        .menu a
+        {
+            color: black;
+            margin-left: 50px;
+            
+        }
+        
+        
+        .menu a:last-of-type
+        {
+            margin-right: 50px;
+        }
  /*END Header */
 /*zeiten*/
 h4
