--- a/Datenschutz.css
+++ b/Datenschutz.css
@@ -1,138 +1,129 @@
  /*START Header */
- .blockLook
-        {
-            background-color: #83abdb;
-            border-radius: 15px;
-            box-shadow: 10px 10px 5px gray;/*gray*/
-           
-            
-        }
+ .blockLook {
+     background-color: #83abdb;
+     border-radius: 15px;
+     box-shadow: 10px 10px 5px gray;
+     /*gray*/
 
-body
-{
+
+ }
+
+ body {
      position: relative;
      max-width: 1200px;
-     margin: 0 auto; 
+     margin: 0 auto;
      font-family: Arial;
-    background-image: linear-gradient(to right, #ADD8E6 , white, white, white, #ADD8E6);
+     background-image: linear-gradient(to right, #ADD8E6, white, white, white, #ADD8E6);
 
-}
+ }
 
-*{
-    color: #000000;
-    
-}
-a 
-{
- 
+ * {
+     color: #000000;
+
+ }
+
+ a {
+
      text-decoration: none;
-}
-a:visited
-{
-    color: black;
-}
+ }
 
-header
-{
-    background-color: #83abdb;
-    height: 150px;
-    border: black solid;
-    border: hidden;
-    padding-top: 1px;
-    height: 170px;
-    border-bottom-right-radius: 15px;
-    border-bottom-left-radius: 15px;
-    box-shadow: 10px 10px 5px gray; 
-    min-width: 600px;
-}
-img
-{
-            position: absolute;
-            width: 150px;
-            height: 150px;
-            margin-left: 30px;
-            
-}
-        
-        
-        @media screen and (max-width: 700px)
-            
-        {
-            .img{
-                display: none;
-        }
-        }
-        
-        
-        #header
-        {
-            text-align: center;
-            
-        }
-        
-        
-        h1
-        {
-    
-            padding: 25px 0;
-        }
-        
-        
-        header nav
-        {
-            text-align: center;
-        }
-        
-        
-        main nav
-        {
-            width: 300px;
-            text-align: center;
-        }
-        
-        
-        .menu a
-        {
-            color: black;
-            margin-left: 50px;
-            
-        }
-        
-        
-        .menu a:last-of-type
-        {
-            margin-right: 50px;
-        }
+ a:visited {
+     color: black;
+ }
+
+ header {
+     background-color: #83abdb;
+     height: 150px;
+     border: black solid;
+     border: hidden;
+     padding-top: 1px;
+     height: 170px;
+     border-bottom-right-radius: 15px;
+     border-bottom-left-radius: 15px;
+     box-shadow: 10px 10px 5px gray;
+     min-width: 600px;
+ }
+
+ img {
+     position: absolute;
+     width: 150px;
+     height: 150px;
+     margin-left: 30px;
+
+ }
+
+
+ @media screen and (max-width: 700px) {
+     .img {
+         display: none;
+     }
+ }
+
+
+ #header {
+     text-align: center;
+
+ }
+
+
+ h1 {
+
+     padding: 25px 0;
+ }
+
+
+ header nav {
+     text-align: center;
+ }
+
+
+ main nav {
+     width: 300px;
+     text-align: center;
+ }
+
+
+ .menu a {
+     color: black;
+     margin-left: 50px;
+
+ }
+
+
+ .menu a:last-of-type {
+     margin-right: 50px;
+ }
+
  /*END Header */
-/*zeiten*/
-h4
-{
-margin: 5px 0;
-}
-li
-{
-list-style: none;
-}
+ /*zeiten*/
+ h4 {
+     margin: 5px 0;
+ }
 
-@media screen and (min-width: 700px){
-header img{
- display: flex;
-}
-}
-main{
-margin-top: 50px;
-text-align: center;
-margin: 5px, 0;
-}
+ li {
+     list-style: none;
+ }
 
-/*START Footer*/
-footer{
-    background: #000;
-    margin-top: 370px;
-    text-align: center;
-}
-#text{
-    padding-bottom: 5px;
-    padding-top: 1px ;
-}
+ @media screen and (min-width: 700px) {
+     header img {
+         display: flex;
+     }
+ }
 
+ main {
+     margin-top: 50px;
+     text-align: center;
+     margin: 5px, 0;
+ }
+
+ /*START Footer*/
+ footer {
+     background: #000;
+     margin-top: 370px;
+     text-align: center;
+ }
+
+ #text {
+     padding-bottom: 5px;
+     padding-top: 1px;
+ }
