--- a/Startseite.css
+++ b/Startseite.css
@@ -53,15 +53,16 @@ img {
 }
 
 
-@media screen and (max-width: 700px) {
-    .img {
-        display: none;
+@media screen and (max-width: 390px) and (min-hight: 844px) {
+    .img 
+    {
+        
     }
 }
 
 
 #header {
-    text-align: center;
+    
 
 }
 
@@ -116,14 +117,14 @@ main nav {
     width: 300px;
 }
 
-@media screen and (min-width: 1060px) {
+@media screen and (min-width: 768px) {
     #Information {
         margin-left: 900px;
         position: absolute;
     }
 }
 
-@media screen and (max-width: 1060px) {
+@media screen and (max-width: 768px) {
     #Information {
         position: absolute;
         margin-left: 10px;
@@ -132,7 +133,7 @@ main nav {
 }
 
 
-@media screen and (max-width: 830px) {
+@media screen and (max-width: 768px) {
     #KlavierKreis {
         display: none;
     }
@@ -148,7 +149,7 @@ li {
     list-style: none;
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 768px) {
     header img {
         display: flex;
     }
