--- a/Startseite.css
+++ b/Startseite.css
@@ -52,6 +52,32 @@ img {
 
 }
 
+@media only screen and ( max-width: 390px) 
+{
+    header {
+        background-color: #83abdb;
+        border: black solid;
+        padding-top: 1px;
+        height: 170px;
+        border-bottom-right-radius: 15px;
+        border-bottom-left-radius: 15px;
+        box-shadow: 10px 10px 5px gray;
+        
+    }
+
+   
+    
+    
+    .menu a {
+        color: black;
+        margin-left: 50px;
+        margin-top: 50px;
+    
+    }
+    
+  
+}
+
 
 @media screen and (max-width: 700px) {
     .img {
