--- a/Startseite.css
+++ b/Startseite.css
@@ -4,7 +4,7 @@
     border-radius: 15px;
     box-shadow: 10px 10px 5px gray;
     /*gray*/
-    margin-top: 40%;
+    
 
 }
 
@@ -50,57 +50,6 @@ img {
     height: 150px;
     margin-left: 30px;
 
-}
-
-@media only screen and ( max-width: 375px) 
-{
-    header {
-        background-color: #83abdb;
-        border: black solid;
-        padding-top: 1px;
-        height: 170px;
-        border-bottom-right-radius: 15px;
-        border-bottom-left-radius: 15px;
-        box-shadow: 10px 10px 5px gray;
-        
-    }
-
-   
-    
-    
-    .menu a {
-        color: black;
-        margin-left: 50px;
-        margin-top: 50px;
-    
-    }
-    
-    .img {
-        display: none;
-    }
-
-    #KlavierKreis {
-        margin-top: 400px;
-        margin-left: 200px;
-        position: absolute;
-        width: 400px;
-        height: 250px;
-    }
-
-    /*START Footer*/
-footer {
-    background: #000;
-    margin-top: 400px;
-    text-align: center;
-}
-
-#text {
-    padding-bottom: 5px;
-    padding-top: 1px;
-}
-
-
-/*END Footer*/
 }
 
 
@@ -190,3 +139,58 @@ footer {
 
 
 /*END Footer*/
+
+@media only screen and ( max-width: 375px) 
+{
+    
+header {
+    min-width: 1168px;
+    height: 210px;
+   
+}
+
+header nav
+{
+    font-size: 200%;
+}
+h1{
+    font-size: 230%;
+}
+
+
+
+#KlavierKreis{
+    margin-top: 1004px;
+    width: 250%;
+    height: 24%;
+    margin-left: 30%
+}
+
+
+
+#Begrüßung{
+    font-size: 250%;
+    margin-left: 5%;
+    width: 150%;
+    text-align: inherit;
+}
+
+#Information
+{
+    font-size: 250%;
+    margin-top: 10%;
+    width: 80%;
+    margin-left: 200%;
+    
+    text-align: inherit;
+}
+
+.blockLook{
+margin-top: 420%;
+width: 310%;
+}
+
+#text{
+    font-size: 200%;
+}
+}
