--- a/Startseite.css
+++ b/Startseite.css
@@ -159,7 +159,7 @@ img {
 }
 
 
-@media only screen and ( max-width: 375px) 
+@media only screen and ( min-width: 374px) and (max-width: 700px) 
 {
     
 header {
