--- a/Kontakt.css
+++ b/Kontakt.css
@@ -122,23 +122,7 @@
  }
 
 
- @media screen and (min-width: 530px) {
 
-     .box1,
-     .box2 {
-         width: 50%;
-
-     }
-
-     .box2 {
-         margin-left: 50%;
-     }
-
-     .box1 {
-
-         position: absolute;
-     }
- }
 
  .Ubutton {
      border: solid black thin;
@@ -171,3 +155,73 @@
  }
 
  /*END Footer*/
+
+ @media only screen and ( min-width: 374px) and (max-width: 700px)
+ {
+
+     header a{
+         font-size: 120%;
+     }
+     
+    .box1{
+        margin-left: 100px;
+        width: 100%;
+        font-size: 200%;
+    }
+
+    .box2{
+        
+        margin-left: 1px;
+    }
+
+    .blockLook{
+        margin-top: 10%;
+        width: 160%;
+        }
+        
+        #text{
+            font-size: 150%;
+        }
+
+        a{
+            font-size: 20px;
+        }
+}
+
+@media only screen and ( min-width: 819px) and (max-width: 1000px) 
+{
+    .menu a {
+        color: black;
+        margin-left: 50px;
+        font-size: 130%;
+    }
+
+    header{
+        width: 853px;
+    }
+
+    .blockLook {
+        background-color: #83abdb;
+        border-radius: 15px;
+        box-shadow: 10px 10px 5px grey;
+        margin-top: 200px;
+        width: 853px;
+    }
+    #text {
+        padding-bottom: 5px;
+        padding-top: 1px;
+        font-size: 150%;
+       
+    }
+
+    .box1 {
+        text-align: center;
+        margin-top: 100px;
+        font-size: 40px;
+    }
+
+    .box2{
+        margin-top: 100px;
+        width: 853px;   
+     }
+}
