--- a/instrumente.css
+++ b/instrumente.css
@@ -10,7 +10,7 @@
 body
 {
      position: relative;
-     max-width: 1200px;
+     max-width: 1300px;
      margin: 0 auto; 
      font-family: Arial;
     background-image: linear-gradient(to right, #ADD8E6 , white, white, white, #ADD8E6);
@@ -52,16 +52,7 @@ img
             margin-left: 30px;
             
 }
-        
-        
-        @media screen and (max-width: 700px)
-            
-        {
-            .img{
-                display: none;
-        }
-        }
-        
+
         
         #header
         {
@@ -267,3 +258,410 @@ footer{
            border-radius: 20%;
            font-size: larger;
        }
+
+       @media only screen and ( min-width: 374px) and (max-width: 700px)       
+{
+    /*Instrumente Anfang*/
+    header {
+        min-width: 1250px;
+        height: 230px;
+       
+    }
+    
+    header nav
+    {
+        font-size: 300%;
+    }
+    h1{
+        font-size: 300%;
+    }
+
+    
+    /*Instrumente Anfang*/
+.menulinks
+{
+    box-shadow: 10px 10px 5px grey;
+    padding-top: 1px;
+    text-align: left;
+    width: 262px;
+    background-color: #83abdb;
+    height: 700px;
+    border-radius: 15px;
+    margin-top: 100px;
+    position: absolute; 
+}
+
+.menulinks a {
+    display: block;
+    width: 80px;
+    padding: 4px;
+    font-size: 50px;
+    margin-left: 10px;
+}
+
+#gitarre {
+    margin-top: 70%;
+    margin-left: 90%;
+    position: absolute;
+    width: 800px;
+    height: 436px;
+    background-color: #CCCCCC;
+}
+
+#geige
+{
+    margin-left: 379px;
+    margin-top: 60%;
+    position: absolute;
+    width: 755px;
+    height: 499px;
+    
+}
+
+#akkordeon
+        {
+            margin-left: 329px;
+            margin-top: 60%;
+            position: absolute;
+            width: 817px;
+            height: 561px;
+        }
+
+        #trompete
+         {
+            margin-top: 50%;
+            margin-left: 345px;
+            position: absolute;
+            width: 798px;
+            height: 582px;
+            background-color: #CCCCCC;
+        }
+        
+        #kontrabass
+         {
+            margin-top: 25%;
+            margin-left: 377px;
+        ;
+            position: absolute;
+            width: 752px;
+            height: 740px;
+            background-color: #CCCCCC;
+            
+        } 
+
+        #klavir
+        {
+            margin-top: 35%;
+            margin-left: 100%;
+            position: absolute;
+            width: 782px;
+            height: 653px;
+       }
+
+#textinst{
+background-color: #83abdb;
+    margin-top: 260%;
+    position: absolute;
+    margin-left: 5px;
+    box-shadow: 10px 10px 5px grey;
+    width: 1200px;
+    padding-left: 10px;
+    border-radius: 15px;
+    height: 55%;
+    
+}
+
+#textinst p{
+    font-size: 400%;
+}
+
+.blockLook{
+    margin-top: 800%;
+    width: 330%;
+    }
+    
+    #text{
+        font-size: 300%;
+    }
+
+   
+
+    
+    /* Instrumente Ende */
+
+    /*Unterricht Anfang */
+
+     
+        
+     #kinderU   {
+        position: absolute;
+         margin-top: 1%;
+         left: 5%;
+         width: 300%;
+         text-align:center;
+         
+          
+        }
+        
+        #erwachsenU
+        {
+            position: absolute;
+            margin-top: 250%;
+            left: 5%;
+            width: 300%;
+            text-align:center;
+        }
+        
+        #gesangU
+        {
+         position: absolute;
+         margin-top: 500%;
+         left: 5%;
+         width: 300%;
+         text-align:center;
+         
+        }
+        
+        .unterrichtT
+        {
+            position: relative;
+            font-size:5px;
+            width: 100%;
+        }
+
+        .Ubutton
+       {
+           border: solid black thin;
+           padding: 8px;
+           border-radius: 20%;
+           font-size: 100%;
+
+       }
+
+       #gesangU p
+       {
+        font-size: 40px;
+        
+       }
+
+       #erwachsenU p
+       {
+        font-size: 40px;
+       }
+
+       #kinderU p{
+        font-size: 40px;
+       }
+
+       h2{
+        font-size: 301%;
+       }
+
+    /* Unttericht Ende */
+}
+
+@media only screen and ( min-width: 819px) and (max-width: 1000px) 
+{
+    header {
+        min-width: 2800px;
+        height: 350px;
+       
+    }
+    
+    header nav
+    {
+        font-size: 500%;
+    }
+    h1{
+        font-size: 500%;
+    }
+
+    img {
+        position: absolute;
+        width: 300px;
+        height: 300px;
+        margin-left: 30px;
+    }
+
+    .blockLook{
+        margin-top: 520%;
+        width: 340%;
+        }
+        
+        #text{
+            font-size: 500%;
+        }
+
+           /*Instrumente Anfang*/
+.menulinks
+{
+    box-shadow: 10px 10px 5px grey;
+    padding-top: 1px;
+    text-align: left;
+    width: 438px;
+    background-color: #83abdb;
+    height: 877px;
+    border-radius: 15px;
+    margin-top: 40%;
+    position: absolute;
+}
+
+.menulinks a {
+    display: block;
+    width: 80px;
+    padding: 4px;
+    font-size: 500%;
+    margin-left: 10px;
+}
+
+#gitarre {
+    margin-top: 40%;
+    margin-left: 90%;
+    position: absolute;
+    width: 1689px;
+    height: 1174px;
+    background-color: #CCCCCC;
+}
+
+#geige
+{
+    margin-left: 692px;
+    margin-top: 30%;
+    position: absolute;
+    width: 1830px;
+    height: 1098px;
+    
+}
+
+#akkordeon
+        {
+            margin-left: 695px;
+            margin-top: 30%;
+            position: absolute;
+            width: 1779px;
+            height: 993px;
+        }
+
+        #trompete
+         {
+            margin-top: 30%;
+            margin-left: 739px;
+            position: absolute;
+            width: 1616px;
+            height: 1122px;
+            background-color: #CCCCCC;
+            
+        }
+        
+        #kontrabass
+         {
+            margin-top: 10%;
+            margin-left: 679px;
+            position: absolute;
+            width: 1733px;
+            height: 1336px;
+            background-color: #CCCCCC;
+            
+        } 
+
+        #klavir
+        {
+            margin-top: 30%;
+            margin-left: 90%;
+            position: absolute;
+            width: 1695px;
+            height: 1178px;
+       }
+
+#textinst{
+    height: 5%;
+    background-color: #83abdb;
+    margin-top: 190%;
+    position: absolute;
+    margin-left: 5%;
+    box-shadow: 10px 10px 5px grey;
+    width: 2665px;
+    padding-left: 10px;
+    height: 42%;
+    
+}
+
+#textinst p{
+    font-size: 600%;
+}
+
+    
+    /* Instrumente Ende */
+
+    /*Unterricht Anfang */
+
+     
+        
+     #kinderU   {
+        position: absolute;
+         margin-top: 1%;
+         left: 15%;
+         width: 300%;
+         text-align:center;
+         
+          
+        }
+        
+        #erwachsenU
+        {
+            position: absolute;
+            margin-top: 180%;
+            left: 15%;
+            width: 300%;
+            text-align:center;
+        }
+        
+        #gesangU
+        {
+         position: absolute;
+         margin-top: 340%;
+         left: 15%;
+         width: 300%;
+         text-align:center;
+         
+        }
+        
+        .unterrichtT
+        {
+            position: relative;
+            font-size:5px;
+            width: 100%;
+        }
+
+        .Ubutton
+       {
+           border: solid black thin;
+           padding: 8px;
+           border-radius: 20%;
+           font-size: 100%;
+
+       }
+
+       #gesangU p
+       {
+        font-size: 400%;
+        
+       }
+
+       #erwachsenU p
+       {
+        font-size: 400%;
+       }
+
+       #kinderU p{
+        font-size: 400%;
+       }
+
+       h2{
+        font-size: 600%;
+       }
+
+       
+
+    /* Unttericht Ende */
+}
