--- a/Formula kinder.css
+++ b/Formula kinder.css
@@ -1,4 +1,17 @@
 
+#form {
+    padding-top: 5px;
+    height: 580px;
+    max-width: 500px;
+    margin: 0px auto;
+    margin-top: 100px;
+    padding-left: 15px;
+}
+
+h2{
+    text-align: center;
+}
+
 .blockLook
 {
     background-color: #83abdb;
@@ -55,6 +68,7 @@ img
 }
 
 
+
 @media screen and (max-width: 700px)
     
 {
@@ -109,7 +123,7 @@ main nav
 
         #form{
             padding-top: 5px;
-            height: 595px;
+            height: 555px;
             max-width: 500px;
             margin: 0px auto;
             margin-top: 100px;
@@ -136,7 +150,7 @@ main nav
         }
 
 
-        /*START Footer*/
+       /*START Footer*/
 footer{
     background: #000;
     margin-top: 100px;
@@ -148,3 +162,73 @@ footer{
 }
         
         /*END Footer*/
+
+        @media only screen and ( min-width: 374px) and (max-width: 700px)
+        {
+
+            header a{
+                font-size: 120%;
+            }
+            
+            #form {
+                padding-top: 5px;
+                height: 600px;
+                width: 500px;
+                max-width: 500px;
+                margin-left: 50px;
+                margin-top: 100px;
+                
+        }
+
+        label{
+            font-size: 120%;
+        }
+
+        .blockLook{
+            margin-top: 50%;
+            width: 160%;
+            }
+            
+            #text{
+                font-size: 150%;
+            }
+
+            a{
+                font-size: 20px;
+            }
+        
+            div#buttons input {
+                display: inline;
+                width: 145px;
+                margin: 0 calc( 25% - 75px );
+                font-size: 100%;
+            }
+    }
+
+    @media only screen and ( min-width: 819px) and (max-width: 1000px) 
+    {
+
+        .menu a {
+            color: black;
+            margin-left: 50px;
+            font-size: 130%;
+        }
+        
+        footer
+        {
+            background: #000;
+        margin-top: 209px;
+        text-align: center;
+        }
+
+        #text {
+            padding-bottom: 5px;
+            padding-top: 1px;
+            font-size: 150%;
+        }
+
+        h2{
+            text-align: center;
+        }
+    }
+    
