--- a/instrumente.css
+++ b/instrumente.css
@@ -53,6 +53,8 @@ img
             
 }
 
+
+
         
         
         @media screen and (max-width: 700px)
@@ -482,6 +484,7 @@ background-color: #83abdb;
     }
     h1{
         font-size: 500%;
+        text-align: center;
     }
 
     img {
